# thesis_frechet_fda

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  plot_fpca.ipynb  plot_representation.ipynb  pyproject.toml  sandbox.ipynb  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: 1_Introduction.tex  2_FDA.tex  2_Maths.tex  3_Densities.tex  3_Density_Regression.tex  3_Fréchet.tex  4_Fréchet.tex  5_Simulation.tex  A_NPRegression.tex  A_Numerics.tex  Application.tex  B_Numerics.tex  Code.tex  Comparison.tex  Conclusion.tex  Densities.tex  FDA.tex  Figures.tex  FrechetGeneral.tex  Fréchet.tex  Introduction.tex  Maths.tex  Numerics.tex  frechet_fda.tex  frechet_fda_pres.tex  refs.bib  task_paper.py
paper/My Library/: My Library.bib
src/: function_class.py  produce_plots.ipynb  reproduction_petersen2016.ipynb  simulation_and_frechet_method.ipynb  simulation_new_scenarios.py
src/frechet_fda/: Petersen_Müller2016_new.ipynb  __init__.py  auxiliary.py  data_generation.py  data_generation_helpers.py  data_generation_tools.py  debugging.ipynb  debugging_qdfs.ipynb  distribution_class.py  distribution_dev.ipynb  distribution_funcs_new.ipynb  distribution_tools.py  fda_funcs.py  fda_methods_sandbox.ipynb  fda_tools.py  fpca_comparison.ipynb  function_class.py  function_tools.py  kernel_methods.py  misc.py  numerical.ipynb  numerics_2.ipynb  numerics_helpers.py  numerics_tools.py  produce_plots.ipynb  reproduction_petersen2016.ipynb  sandbox.ipynb  tests.py  (+6 more)
tests/: quatsch.tex
(+34 files in other folders)
