[metadata]
name = frechet_fda
description = Fréchet Regression and Functional Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mirkimirk/frechet_fda
author = Mirkan Öcal
author_email = mirkanoecal@live.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/mirkimirk/frechet_fda
    Documentation = https://github.com/mirkimirk/frechet_fda
    Github = https://github.com/mirkimirk/frechet_fda
    Tracker = https://github.com/mirkimirk/frechet_fda/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/frechet_fda/_version.py
